Fixed height of bottom-section so they match using align-items stretch

--- a/rogue_pickings/css/main.css
+++ b/rogue_pickings/css/main.css
@@ -188,9 +188,10 @@ footer span {
 	margin: 0 auto;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: stretch;
 	flex-direction: row;
 }
+
 	
 	.section-two {
 		border-left: 1px solid #eee;
